[gd_scene load_steps=13 format=3 uid="uid://cfqfl0mspjhl3"]

[ext_resource type="Texture2D" uid="uid://cl5irob3klkpq" path="res://Assets/icon.svg" id="1_cugle"]
[ext_resource type="Script" path="res://OverWorld/Player/over_world_player.gd" id="1_on7e7"]
[ext_resource type="Script" path="res://BattlerStats/battler_stats_res.gd" id="2_kudrg"]
[ext_resource type="Resource" uid="uid://bfw1l3u4gilwr" path="res://BattlerStats/player_battler_1.tres" id="3_s44bh"]
[ext_resource type="Resource" uid="uid://cyk0humsgewri" path="res://BattlerStats/player_battler_2.tres" id="4_0exic"]
[ext_resource type="Script" path="res://BattlerStats/Items/item_stats_res.gd" id="4_27muv"]
[ext_resource type="Resource" uid="uid://c7babmwbaf40c" path="res://BattlerStats/Items/bat.tres" id="5_04kp1"]
[ext_resource type="PackedScene" uid="uid://b0fwanaepm4y3" path="res://OverWorld/Player/overworld_menu.tscn" id="5_vqbcp"]
[ext_resource type="Resource" uid="uid://ca1j72ib5iguh" path="res://BattlerStats/Items/shovel.tres" id="6_rpkhu"]
[ext_resource type="Resource" uid="uid://t6cii12jjs4o" path="res://BattlerStats/Items/heal.tres" id="8_510he"]
[ext_resource type="PackedScene" uid="uid://b08cfcf37hcxe" path="res://text_prompter.tscn" id="10_p4xre"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3no4w"]
size = Vector2(16, 16)

[node name="OverWorldPlayer" type="Area2D" groups=["Player"]]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_on7e7")
pc = Array[ExtResource("2_kudrg")]([ExtResource("3_s44bh"), ExtResource("4_0exic")])
inv = Array[ExtResource("4_27muv")]([ExtResource("5_04kp1"), ExtResource("6_rpkhu"), ExtResource("8_510he"), ExtResource("8_510he")])

[node name="Icon" type="Sprite2D" parent="."]
scale = Vector2(0.12, 0.12)
texture = ExtResource("1_cugle")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_3no4w")

[node name="CollisionRaycast" type="RayCast2D" parent="."]
target_position = Vector2(0, 16)

[node name="InteractRaycast" type="RayCast2D" parent="."]
target_position = Vector2(0, 16)
collision_mask = 8
collide_with_areas = true
collide_with_bodies = false

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextPrompter" parent="CanvasLayer" instance=ExtResource("10_p4xre")]
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OverworldMenu" parent="CanvasLayer" instance=ExtResource("5_vqbcp")]

[node name="DangerLevelTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="DangerLevelTimer" to="." method="_on_danger_level_timer_timeout"]
